force-app/main/default/objects/Nihon_Bike__c/Nihon_Bike__c.object-meta.xml
<CustomObject>
    <label>Nihon Bike</label>
    <nameField>
        <label>Nihon Bike Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Nihon Bikes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>