force-app/main/default/objects/Nihon_Bike__c/fields/Bike_Comments__c.field-meta.xml
<CustomField>
    <fullName>Bike_Comments__c</fullName>
    <label>Bike Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>