force-app/main/default/objects/Nihon_Bike__c/fields/Bike_Model__c.field-meta.xml
<CustomField>
    <fullName>Bike_Model__c</fullName>
    <label>Bike Model</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>