force-app/main/default/objects/Nihon_Bike__c/fields/Brand_of_Bike__c.field-meta.xml
<CustomField>
    <fullName>Brand_of_Bike__c</fullName>
    <label>Brand of Bike</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yamaha</fullName>
                <default>true</default>
                <label>Yamaha</label>
            </value>
            <value>
                <fullName>Honda</fullName>
            </value>
            <value>
                <fullName>Suzuki</fullName>
            </value>
            <value>
                <fullName>BMW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>