force-app/main/default/objects/Nihon_Bike__c/fields/Registered_on__c.field-meta.xml
<CustomField>
    <fullName>Registered_on__c</fullName>
    <label>Registered on</label>
    <type>DateTime</type>
</CustomField>